refactor(controller): make ds build a job (#2626)